--- a/Assignment7/Gallery.html
+++ b/Assignment7/Gallery.html
@@ -15,7 +15,7 @@
         <ul>
             <li><a href="Assignment7.html">Welcome Page</a></li>
             <li><a href="about.html">About this site</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="Gallery.html">Gallery</a></li>
         </ul>
     </nav>
     
