--- a/Portfolio/MainPage.html
+++ b/Portfolio/MainPage.html
@@ -4,6 +4,14 @@
 	<meta charset="UTF-8">
 	<title>AJ's Portfolio</title>
 	<link href="Portfolio.css" rel="stylesheet" type="text/css">
+
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" rel="stylesheet">
+
+	<link rel="stylesheet" href="https://use.typekit.net/ovf3oja.css">
+
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
 	<div id="wrapper">
@@ -11,13 +19,16 @@
 		<h2>Projects</h2>
 		<main>
 			<section>
-			<h3>Game Design</h3>
+			<h3><i class="bi bi-controller"></i> Game Design </h3> 
+			
 			<img src ="GameImg.png">
-			<h3>Narrative/Visual Design</h3>
+			<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/2003961216&color=%230066cc&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/music-lover-994021454" title="Music Lover" target="_blank" style="color: #cccccc; text-decoration: none;">Music Lover</a> · <a href="https://soundcloud.com/music-lover-994021454/sets/8-bit-music" title="8 bit music" target="_blank" style="color: #cccccc; text-decoration: none;">8 bit music</a></div>
+			<h3> <i class="bi bi-pencil-fill"></i> Narrative/Visual Design</h3>
+
 			<img src = "Futuristic inventory 2.0.png">
 			</section>
 			<aside>
-				<h3>Contact</h3>
+				<h3> <i class="bi bi-person-circle"></i> Contact</h3>
 				<img src = "IMG_4133.png">
 			</aside>
 		</main>
