--- a/Portfolio/MainPage.html
+++ b/Portfolio/MainPage.html
@@ -25,21 +25,25 @@
 		<h1> AJ's Portfolio</h1>
 		<h2>Projects</h2>
 		
+			<div id="myCarousel" class="f-carousel">
+				<div class="f-carousel__slide"><img src="Futuristic inventory 2.0.png"></div>
+				<div class="f-carousel__slide"><img src="Game design visual space map.jpeg"></div>
+				<div class="f-carousel__slide"><img src="GameImg.png"></div>
+			</div>
+			
 		<main>
-			<section>
-				<div id="myCarousel" class="f-carousel">
-					<div class="f-carousel__slide"><img src="Futuristic inventory 2.0.png"></div>
-					<div class="f-carousel__slide"><img src="Game design visual space map.jpeg"></div>
-					<div class="f-carousel__slide"><img src="GameImg.png"></div>
-				</div>
-				</section>
+			
 			<section>
 			<h3><i class="bi bi-controller"></i> Game Design </h3> 
 			
-			<img src ="GameImg.png">
-			<h3> <i class="bi bi-pencil-fill"></i> Narrative/Visual Design</h3>
+			<a href ="Game Design.html"><img src ="GameImg.png"></a>
+			<h3> <i class="bi bi-pencil-fill"></i>Visual Design</h3>
 
-			<img src = "Futuristic inventory 2.0.png">
+			<a href ="Visual.html"><img src = "Futuristic inventory 2.0.png"></a>
+
+			<h3><i class="bi bi-controller"></i> Narrative Design </h3> 
+			
+			<a href ="Narrative.html"><img src ="GameImg.png"></a>
 			</section>
 			<aside>
 				<h3> <i class="bi bi-person-circle"></i> Contact</h3>
