--- a/Portfolio/MainPage.html
+++ b/Portfolio/MainPage.html
@@ -23,10 +23,19 @@
 <body>
 	<div id="wrapper">
 		<h1> AJ's Portfolio</h1>
+		<nav>
+			<ul>
+				<li><a href ="Visual.html">Visual Design</a></li>
+				<li><a href ="Contact.html"> Contact </a></li>
+				<li><a href ="MainPage.html">Home</a></li>
+				<li><a href ="Game Design.html">Game Design</a></li>
+                <li><a href ="Narrative.html">Narrative Design</a></li>
+			</ul>
+		</nav>	
 		<h2>Projects</h2>
 		
 			<div id="myCarousel" class="f-carousel">
-				<div class="f-carousel__slide"><img src="Futuristic inventory 2.0.png"></div>
+				<div class="f-carousel__slide"><img src="Menu.png"></div>
 				<div class="f-carousel__slide"><img src="Game design visual space map.jpeg"></div>
 				<div class="f-carousel__slide"><img src="GameImg.png"></div>
 			</div>
@@ -34,20 +43,21 @@
 		<main>
 			
 			<section>
-			<h3><i class="bi bi-controller"></i> Game Design </h3> 
+			<h3><a href = "Game Design.html"><i class="bi bi-controller"></i> Game Design </a></h3> 
 			
 			<a href ="Game Design.html"><img src ="GameImg.png"></a>
-			<h3> <i class="bi bi-pencil-fill"></i>Visual Design</h3>
+
+			<h3><a href = "Visual.html">  <i class="bi bi-pencil-fill"></i>Visual Design </a></h3>
 
 			<a href ="Visual.html"><img src = "Futuristic inventory 2.0.png"></a>
 
-			<h3><i class="bi bi-controller"></i> Narrative Design </h3> 
+			<h3><a href = "Narrative.html"><i class="bi bi-controller"></i> Narrative Design </a></h3>
 			
 			<a href ="Narrative.html"><img src ="GameImg.png"></a>
 			</section>
 			<aside>
-				<h3> <i class="bi bi-person-circle"></i> Contact</h3>
-				<img src = "IMG_4133.png">
+				<h3> <a href = "Contact.html"><i class="bi bi-person-circle"></i> About Me </a></h3>
+				<a href ="Contact.html"><img src = "About.png"></a>
 			</aside>
 
 			
