--- a/Portfolio/Game Design.html
+++ b/Portfolio/Game Design.html
@@ -27,7 +27,7 @@
 		<nav>
 			<ul>
 				<li><a href ="Visual.html">Visual Design</a></li>
-				<li><a href ="Contact.html"> Contact </a></li>
+				<li><a href ="Contact.html"> About </a></li>
 				<li><a href ="MainPage.html">Home</a></li>
 				<li><a href ="Game Design.html">Game Design</a></li>
                 <li><a href ="Narrative.html">Narrative Design</a></li>
@@ -60,7 +60,7 @@
 				<div class = "description">
 					<h3>Description </h3>
 				<p>
-					- Lost space is a 3d platformer where the player shoots enemies,collect health orbs if needed, and platform across to the door that leads to level 2. Level 2 would consist of the player collecting parts and interacting with other game objects as a way to "repair" broken machines.
+					- Lost space is a 3d platformer prototype where the player shoots enemies,collect health orbs if needed, and platform across to the door that leads to level 2. Level 2 would consist of the player collecting parts and interacting with other game objects as a way to "repair" broken machines. They would also have to shoot enemies.
 				</p>
 				</div>
 
@@ -68,19 +68,22 @@
 			<section>
 				<div class = "skills">
 					<h3>Skills</h3>
-					<p>-I used </p>
+					<p>- Just like the first project the game uses C# as it's code. I was able to code a shoot mechanic using delta time, and was able to have a collection mechanic with the parts. I also was able to have a functioning health bar work based on touch from enemies or health orbs. I was also able to program basic enemy tracking to player. </p>
 				</div>
 			</section>
 
 			<section>
 				<h3>Combat Space Concept</h3>
 				<a href = "Game design visual space map.jpeg"><img src = "Combat space.png"></a>
+				<p>
+				<a href = "Game combat space.pdf" target="_blank">Combat Space Document</a>
+				</p>	
 				</section>
 				 <section>
 					<div class = "description">
 						<h3>Description </h3>
 					<p>
-						- Lost space is a 3d platformer where the player shoots enemies,collect health orbs if needed, and platform across to the door that leads to level 2. Level 2 would consist of the player collecting parts and interacting with other game objects as a way to "repair" broken machines.
+						- This is an Concept for a level in a Five nights at freddy's game that includes different types of encounters and exploration. A PDF is also given to describe the map and a description of each area in the level. Combat encounters are also a big portion of this project.
 					</p>
 					</div>
 	
@@ -88,7 +91,7 @@
 				<section>
 					<div class = "skills">
 						<h3>Skills</h3>
-						<p>-I used </p>
+						<p>- The map and documentation shows my understanding of basic level/encounter design by drawing a map, drawing images and color coding certain areas. I got this understanding of combat encounters from my Game Design 2 course at ISU. </p>
 					</div>
 				</section>
 
