--- a/Portfolio/Visual.html
+++ b/Portfolio/Visual.html
@@ -25,8 +25,8 @@
 		<h1> Visual Projects</h1>
 		<nav>
 			<ul>
-				<li><a href ="Visual.html">Visual/Narrative Design</a></li>
-				<li><a href ="Contact.html"> Contact </a></li>
+				<li><a href ="Visual.html">Visual Design</a></li>
+				<li><a href ="Contact.html"> About </a></li>
 				<li><a href ="MainPage.html">Home</a></li>
 				<li><a href ="Game Design.html">Game Design</a></li>
 				<li><a href ="Narrative.html">Narrative Design</a></li>
@@ -50,10 +50,11 @@
 				<h3>Descriptions </h3>
 				<p > -Character Menu: UI design made for my UI/UX design course at ISU. The idea behind this is making a UI asset based on another student's idea. The frame that the student wanted was a futurstic/cybernetic look. The frame shows the character name in bottom left and the level in the bottom right. The top is the navigation for the player to access other menus.</p>
 					<p>
-						-Inventory Menu: 
+						-Inventory Menu: This Project is to make an Inventory menu based on another student's design. The design follows the same futuristic and cybernetic feel as my other project. The bottom with the 15/40 is the amount of items the player has in their inventory. A back button is also present and functional in the figma version at the top left corner.
 				</p>
 				<h3>Skills</h3>
-				<p>This design was created using adobe photoshop and also figma so I have decent understanding of how to use those tools to create UI elements.</p>
+				<p>-This design was created using adobe photoshop and also figma so I have decent understanding of how to use those tools to create UI elements. With both Photoshop and figma I was able to get better at designing UI and including interactive elements. </p>
+				<p>-The figma verisons of both menus allow viewers to hover over the tabs and click the Inventory tab. I was able to make use of the button feature on figma to make the Inventory tab interactive. </p>
 			</section>
 	
 				
