--- a/Portfolio/MainPage.html
+++ b/Portfolio/MainPage.html
@@ -26,7 +26,7 @@
 		<nav>
 			<ul>
 				<li><a href ="Visual.html">Visual Design</a></li>
-				<li><a href ="Contact.html"> Contact </a></li>
+				<li><a href ="Contact.html"> About </a></li>
 				<li><a href ="MainPage.html">Home</a></li>
 				<li><a href ="Game Design.html">Game Design</a></li>
                 <li><a href ="Narrative.html">Narrative Design</a></li>
@@ -43,7 +43,7 @@
 		<main>
 			
 			<section>
-			<h3><a href = "Game Design.html"><i class="bi bi-controller"></i> Game Design </a></h3> 
+			<h3><a href = "Game Design.html" ><i class="bi bi-controller"></i> Game Design </a></h3> 
 			
 			<a href ="Game Design.html"><img src ="GameImg.png"></a>
 
@@ -51,7 +51,7 @@
 
 			<a href ="Visual.html"><img src = "Futuristic inventory 2.0.png"></a>
 
-			<h3><a href = "Narrative.html"><i class="bi bi-controller"></i> Narrative Design </a></h3>
+			<h3><a href = "Narrative.html"><i class="bi bi-journal-text"></i></i> Narrative Design </a></h3>
 			
 			<a href ="Narrative.html"><img src ="GameImg.png"></a>
 			</section>
