--- a/Portfolio/Narrative.html
+++ b/Portfolio/Narrative.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Visual Design</title>
+	<title>Narrative Design</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" rel="stylesheet">
@@ -26,7 +26,7 @@
 		<nav>
 			<ul>
 				<li><a href ="Visual.html">Visual Design</a></li>
-				<li><a href ="Contact.html"> Contact </a></li>
+				<li><a href ="Contact.html"> About </a></li>
 				<li><a href ="MainPage.html">Home</a></li>
 				<li><a href ="Game Design.html">Game Design</a></li>
                 <li><a href ="Narrative.html">Narrative Design</a></li>
@@ -37,7 +37,22 @@
 			
 		<main>
 			
+			<section>
+				<h3>TTRPG Adventure</h3>
+				<p><a href = "TTRPG Adventure Creation.pdf" target="_blank">Forest of Damned Souls PDF</a></p>
+				</section>
+				 <section>
+					<div class = "description">
+						<h3>Description </h3>
+					<p>
+						This PDF is a quest for a TTRPG game. It is a basic run through on how a story would play out with a group of players plaing in a party. The PDF includes the background of the story and then 3 major locations and the main key events that would play out. 
+						</p>
+						<p>
+							The PDF also contains some quotes on what characters would say and what certain events could happen depending on dice rolls. This was written for a project in my Game Design 2 class at ISU.
+					</p>
+					</div>
 	
+				</section>
 
 			
 		</main>
