--- a/Portfolio/MainPage.html
+++ b/Portfolio/MainPage.html
@@ -53,7 +53,7 @@
 
 			<h3><a href = "Narrative.html"><i class="bi bi-journal-text"></i></i> Narrative Design </a></h3>
 			
-			<a href ="Narrative.html"><img src ="GameImg.png"></a>
+			<a href ="Narrative.html"><img src ="WritingImg.png"></a>
 			</section>
 			<aside>
 				<h3> <a href = "Contact.html"><i class="bi bi-person-circle"></i> About Me </a></h3>
